--- a/examples/cosmos-validator-rewards/package.json
+++ b/examples/cosmos-validator-rewards/package.json
@@ -1,7 +1,11 @@
 {
   "name": "cosmos-validator-rewards-example",
   "version": "0.1.0",
-  "repository": "https://github.com/graphprotocol/example-subgraph",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/graphprotocol/graph-tooling",
+    "directory": "examples/cosmos-validator-rewards"
+  },
   "license": "MIT",
   "private": true,
   "scripts": {
