--- a/examples/near-blocks/package.json
+++ b/examples/near-blocks/package.json
@@ -1,7 +1,11 @@
 {
   "name": "near-blocks-example",
   "version": "0.1.0",
-  "repository": "https://github.com/graphprotocol/example-subgraph",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/graphprotocol/graph-tooling",
+    "directory": "examples/near-blocks"
+  },
   "license": "MIT",
   "private": true,
   "scripts": {
