--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,7 +101,7 @@ jobs:
           command: pnpm run test:cli -- --forceExit
 
   event-handler:
-    name: Basic Event Handlers
+    name: Ethereum Basic Event Handlers
     needs: [lint]
     runs-on: ubuntu-latest
     steps:
@@ -143,7 +143,7 @@ jobs:
         with:
           timeout_minutes: 10
           max_attempts: 3
-          command: pnpm run --filter="basic-event-handlers" test
+          command: pnpm run --filter="ethereum-basic-event-handlers" test
 
   ts:
     name: Graph TS
