--- a/examples/near-receipts/package.json
+++ b/examples/near-receipts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "near-receipts-example",
+  "name": "example-near-receipts",
   "version": "0.1.0",
   "repository": {
     "type": "git",
