add cli dep for basic example

--- a/examples/ethereum-basic-event-handlers/package.json
+++ b/examples/ethereum-basic-event-handlers/package.json
@@ -21,6 +21,7 @@
     "truffle-hdwallet-provider": "1.0.6"
   },
   "devDependencies": {
+    "@graphprotocol/graph-cli": "workspace:*",
     "@graphprotocol/graph-ts": "workspace:*",
     "apollo-fetch": "^0.7.0"
   },
