--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,6 +138,9 @@ jobs:
       - name: Build Packages
         run: pnpm build
 
+      - name: Should re-link local workspace deps?
+        run: pnpm i
+
       - name: Run Tests
         uses: nick-fields/retry@v2
         with:
