--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -72,6 +72,8 @@
   },
   "oclif": {
     "bin": "graph",
-    "commands": "./dist/commands"
+    "commands": "./dist/commands",
+    "additionalHelpFlags": ["-h"],
+    "additionalVersionFlags": ["-v"]
   }
 }
