--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "eslint": "^8.31.0",
     "jest": "26.6.3",
     "prettier": "^2.8.2"
+  },
+  "resolutions": {
+    "//": "scrypt needs to land a patch so for now: https://github.com/barrysteyn/node-scrypt/issues/201#issuecomment-797372965",
+    "scrypt": "github:barrysteyn/node-scrypt#fb60a8d3c158fe115a624b5ffa7480f3a24b03fb"
   }
 }
