--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     with:
       releaseScript: release
       nodeVersion: 16
-      packageManager: pnpm
+      packageManager: pnpm@8
     secrets:
       githubToken: ${{  secrets.GITHUB_TOKEN }}
       npmToken: ${{ secrets.NPM_TOKEN }}
