chore: make CI permission write (#1287)
* chore: make CI permission write

* prettier

* fixed workflow github token

---------

Co-authored-by: Ruslan Rotaru <rotarur.social.apps@gmail.com>

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,12 +4,14 @@ on:
     branches:
       - main
 
+permissions: write-all
+
 jobs:
   dependencies:
     uses: the-guild-org/shared-config/.github/workflows/changesets-dependencies.yaml@main
     if: ${{ github.event.pull_request.title != 'Upcoming Release Changes' }}
     secrets:
-      githubToken: ${{ secrets.GUILD_BOT_TOKEN }}
+      githubToken: ${{ secrets.GITHUB_TOKEN }}
 
   alpha:
     uses: the-guild-org/shared-config/.github/workflows/release-snapshot.yml@main
@@ -20,7 +22,7 @@ jobs:
       nodeVersion: 16
       packageManager: pnpm
     secrets:
-      githubToken: ${{ secrets.GUILD_BOT_TOKEN }}
+      githubToken: ${{ secrets.GITHUB_TOKEN }}
       npmToken: ${{ secrets.NPM_TOKEN }}
 
   release-candidate:
@@ -33,5 +35,5 @@ jobs:
       packageManager: pnpm
       restoreDeletedChangesets: true
     secrets:
-      githubToken: ${{ secrets.GUILD_BOT_TOKEN }}
+      githubToken: ${{ secrets.GITHUB_TOKEN }}
       npmToken: ${{ secrets.NPM_TOKEN }}
