--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ on:
     branches:
       - main
 
+permissions: write-all
+
 jobs:
   stable:
     uses: the-guild-org/shared-config/.github/workflows/release-stable.yml@main
@@ -12,5 +14,5 @@ jobs:
       nodeVersion: 16
       packageManager: pnpm
     secrets:
-      githubToken: ${{  secrets.GUILD_BOT_TOKEN }}
+      githubToken: ${{  secrets.GITHUB_TOKEN }}
       npmToken: ${{ secrets.NPM_TOKEN }}
