--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "engines": {
     "pnpm": ">=8"
   },
+  "packageManager": "pnpm@8.1.0",
   "scripts": {
     "build": "pnpm --filter=@graphprotocol/graph-* build",
     "lint": "pnpm lint:prettier && pnpm lint:eslint",
