--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "(Apache-2.0 OR MIT)",
   "private": true,
+  "packageManager": "pnpm@8.1.0",
   "engines": {
     "pnpm": ">=8"
   },
