--- a/examples/ethereum-gravatar/.gitignore
+++ b/examples/ethereum-gravatar/.gitignore
@@ -62,3 +62,14 @@ typings/
 
 # next.js build output
 .next
+
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+artifacts
+
