--- a/examples/ethereum-basic-event-handlers/package.json
+++ b/examples/ethereum-basic-event-handlers/package.json
@@ -10,22 +10,16 @@
   "scripts": {
     "build": "graph build",
     "codegen": "graph codegen",
+    "build:contracts": "hardhat compile",
     "create-test": "graph create test/basic-event-handlers --node http://127.0.0.1:18020",
     "deploy-test": "graph deploy test/basic-event-handlers --version-label v0.0.1 --ipfs http://localhost:15001 --node http://127.0.0.1:18020",
     "test": "docker compose up -d && sleep 30 && truffle test --network test && docker compose down"
   },
-  "dependencies": {
-    "babel-polyfill": "6.26.0",
-    "babel-register": "6.26.0",
-    "truffle": "5.8.2",
-    "truffle-hdwallet-provider": "1.0.6"
-  },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "hardhat": "^2.13.1",
     "@graphprotocol/graph-cli": "workspace:*",
     "@graphprotocol/graph-ts": "workspace:*",
     "apollo-fetch": "^0.7.0"
-  },
-  "resolutions": {
-    "assemblyscript": "0.19.10"
   }
 }
