--- a/examples/ethereum-gravatar/package.json
+++ b/examples/ethereum-gravatar/package.json
@@ -10,22 +10,17 @@
   "private": true,
   "scripts": {
     "build": "graph build",
-    "build-contract": "solc contracts/Gravity.sol --abi -o abis --overwrite && solc contracts/Gravity.sol --bin -o bin --overwrite",
+    "build:contract": "hardhat compile",
     "codegen": "graph codegen",
     "create": "graph create example --node https://api.thegraph.com/deploy/",
     "create-local": "graph create example --node http://127.0.0.1:8020",
     "deploy": "graph deploy example --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
     "deploy-local": "graph deploy example --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020"
   },
-  "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "babel-register": "^6.26.0",
-    "truffle": "^5.8.1",
-    "truffle-contract": "^4.0.31",
-    "truffle-hdwallet-provider": "^1.0.17"
-  },
   "devDependencies": {
     "@graphprotocol/graph-cli": "workspace:*",
-    "@graphprotocol/graph-ts": "workspace:*"
+    "@graphprotocol/graph-ts": "workspace:*",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "hardhat": "^2.13.1"
   }
 }
