--- a/examples/ethereum-gravatar/subgraph.yaml
+++ b/examples/ethereum-gravatar/subgraph.yaml
@@ -18,7 +18,7 @@ dataSources:
         - Gravatar
       abis:
         - name: Gravity
-          file: ./abis/Gravity.json
+          file: ./artifacts/contracts/Gravity.sol/GravatarRegistry.json
       eventHandlers:
         - event: NewGravatar(uint256,address,string,string)
           handler: handleNewGravatar
