--- a/examples/ethereum-basic-event-handlers/package.json
+++ b/examples/ethereum-basic-event-handlers/package.json
@@ -9,17 +9,17 @@
   "private": true,
   "scripts": {
     "build": "graph build",
-    "codegen": "graph codegen",
     "build:contracts": "hardhat compile",
+    "codegen": "graph codegen",
     "create-test": "graph create test/basic-event-handlers --node http://127.0.0.1:18020",
     "deploy-test": "graph deploy test/basic-event-handlers --version-label v0.0.1 --ipfs http://localhost:15001 --node http://127.0.0.1:18020",
     "test": "docker compose up -d && sleep 30 && truffle test --network test && docker compose down"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "hardhat": "^2.13.1",
     "@graphprotocol/graph-cli": "workspace:*",
     "@graphprotocol/graph-ts": "workspace:*",
-    "apollo-fetch": "^0.7.0"
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "apollo-fetch": "^0.7.0",
+    "hardhat": "^2.13.1"
   }
 }
