--- a/package.json
+++ b/package.json
@@ -36,5 +36,10 @@
     "eslint": "^8.31.0",
     "jest": "29.5.0",
     "prettier": "^2.8.2"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "oclif@3.8.1": "patches/oclif@3.8.1.patch"
+    }
   }
 }
