--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,11 +8,35 @@ permissions: write-all
 
 jobs:
   stable:
-    uses: the-guild-org/shared-config/.github/workflows/release-stable.yml@main
-    with:
-      releaseScript: release
-      nodeVersion: 16
-      packageManager: pnpm
-    secrets:
-      githubToken: ${{  secrets.GITHUB_TOKEN }}
-      npmToken: ${{ secrets.NPM_TOKEN }}
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+        token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Setup environment
+      uses: the-guild-org/shared-config/setup@main
+      with:
+        nodeVersion: 16
+        packageManager: pnpm
+    - name: Set variables
+      id: vars
+      run: |
+        echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+        echo "date=$(date +"%B %d, %Y")" >> $GITHUB_OUTPUT
+    - name: Build
+      run: pnpm --filter=@graphprotocol/graph-cli build
+    - name: Pack binaries
+      run: pnpm --filter=@graphprotocol/graph-cli oclif:pack
+    - name: Release / pull_request
+      uses: dotansimha/changesets-action@v1.4.0
+      with:
+        publish: pnpm release
+        version: pnpm changeset version
+        commit: 'chore(release): update monorepo packages versions'
+        title: Upcoming Release Changes
+        createGithubReleases: true
+        githubReleaseName: ${{ steps.vars.outputs.date }}
+        githubReleaseAssets: packages/cli/dist/*.tar.gz
+      env:
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
