--- a/examples/basic-event-handlers/package.json
+++ b/examples/basic-event-handlers/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "../../packages/cli/dist/bin.js build",
-    "codegen": "../../packages/cli/dist/bin.js codegen",
-    "create-test": "../../packages/cli/dist/bin.js create test/basic-event-handlers --node http://127.0.0.1:18020",
-    "deploy-test": "../../packages/cli/dist/bin.js deploy test/basic-event-handlers --version-label v0.0.1 --ipfs http://localhost:15001 --node http://127.0.0.1:18020",
+    "build": "../../packages/cli/bin/run build",
+    "codegen": "../../packages/cli/bin/run codegen",
+    "create-test": "../../packages/cli/bin/run create test/basic-event-handlers --node http://127.0.0.1:18020",
+    "deploy-test": "../../packages/cli/bin/run deploy test/basic-event-handlers --version-label v0.0.1 --ipfs http://localhost:15001 --node http://127.0.0.1:18020",
     "test": "docker compose up -d && sleep 30 && truffle test --network test && docker compose down"
   },
   "dependencies": {
