--- a/.gitignore
+++ b/.gitignore
@@ -58,9 +58,10 @@ typings/
 .next
 
 # Example subgraph build
-examples/example-subgraph/build
-examples/example-subgraph/generated
-examples/example-subgraph/node_modules
+examples/*/build
+examples/*/generated
+examples/*/node_modules
+examples/*/data
 
 # validation tests output
 */tests/cli/validation/*/generated
