--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,7 +15,8 @@
     "bin",
     "dist",
     "oclif.manifest.json",
-    "README.md"
+    "README.md",
+    "!dist/*.tar.gz"
   ],
   "scripts": {
     "build": "tsc -b tsconfig.build.json && oclif manifest && oclif readme && copyfiles -u 1 src/**/*.graphql dist/",
