--- a/.gitignore
+++ b/.gitignore
@@ -58,9 +58,10 @@ typings/
 .next
 
 # Example subgraph build
-examples/example-subgraph/build
-examples/example-subgraph/generated
-examples/example-subgraph/node_modules
+examples/*/build
+examples/*/generated
+examples/*/node_modules
+examples/*/data
 
 # validation tests output
 */tests/cli/validation/*/generated
@@ -76,6 +77,7 @@ dist
 
 # Oclif manifest
 oclif.manifest.json
-
 # Oclif pack
 tmp
+
+*.wasm
