--- a/examples/cosmos-validator-delegations/package.json
+++ b/examples/cosmos-validator-delegations/package.json
@@ -25,8 +25,8 @@
     "babel-register": "^6.26.0"
   },
   "devDependencies": {
-    "@graphprotocol/graph-cli": "workspace:*",
-    "@graphprotocol/graph-ts": "workspace:*",
+    "@graphprotocol/graph-cli": "latest",
+    "@graphprotocol/graph-ts": "latest",
     "mustache": "^4.2.0"
   }
 }
