--- a/examples/substreams-powered-subgraph/substreams.yaml
+++ b/examples/substreams-powered-subgraph/substreams.yaml
@@ -1,12 +1,12 @@
 specVersion: v0.1.0
 package:
-  name: 'substreams_test'
-  version: v1.0.1
+  name: 'substreams_test' # the name to be used in the .spkg
+  version: v1.0.1 # the version to use when creating the .spkg
 
-imports:
+imports: # dependencies
   entity: https://github.com/streamingfast/substreams-entity-change/releases/download/v0.2.1/substreams-entity-change-v0.2.1.spkg
 
-protobuf:
+protobuf: # specifies custom types for use by Substreams modules
   files:
     - example.proto
   importPaths:
@@ -17,7 +17,7 @@ binaries:
     type: wasm/rust-v1
     file: ./target/wasm32-unknown-unknown/release/substreams.wasm
 
-modules:
+modules: # specify modules with their inputs and outputs.
   - name: map_contract
     kind: map
     inputs:
@@ -30,4 +30,4 @@ modules:
     inputs:
       - map: map_contract
     output:
-      type: proto:substreams.entity.v1.EntityChanges
+      type: proto:substreams.entity.v1.EntityChanges # this type can be consumed by Graph Node
