fix: only ask for subgraph name and directory for init examples (#1382)
* attempt

* fix

* run codegen

* local codegen command

* fix substream eg

* prettier

--- a/examples/substreams-powered-subgraph/package.json
+++ b/examples/substreams-powered-subgraph/package.json
@@ -8,8 +8,9 @@
   },
   "private": true,
   "scripts": {
+    "codegen": "graph codegen",
+    "deploy": "graph deploy",
     "subgraph:build": "graph build",
-    "subgraph:deploy": "graph deploy",
     "substreams:build": "cargo build --target wasm32-unknown-unknown --release",
     "substreams:clean": "rm -rf ./target && rm -rf ./src/pb",
     "substreams:package": "substreams pack ./substreams.yaml",
