--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -53,7 +53,8 @@
     "tmp-promise": "3.0.3",
     "web3-eth-abi": "1.7.0",
     "which": "2.0.2",
-    "yaml": "1.10.2"
+    "yaml": "1.10.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
