--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "gluegun": "^4.3.1",
     "graphql": "^15.5.0",
     "immutable": "^3.8.2",
-    "ipfs-http-client": "^34.0.0",
-    "jayson": "^3.0.2",
+    "ipfs-http-client": "55.0.0",
+    "jayson": "4.0.0",
     "js-yaml": "^3.13.1",
     "node-fetch": "^2.3.0",
     "pkginfo": "^0.4.1",
