--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       fail-fast: false
       matrix:
         # For some reason tests take forever on node 14 so will re-visit in future when we decide what versions to test on
-        node-version: [16, 18]
+        node-version: [16, 18, 20]
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
