--- a/examples/matic-lens-protocol-posts-subgraph/subgraph.yaml
+++ b/examples/matic-lens-protocol-posts-subgraph/subgraph.yaml
@@ -6,7 +6,7 @@ dataSources:
     name: Contract
     network: matic
     source:
-      address: "0xDb46d1Dc155634FbC732f92E853b10B288AD5a1d"
+      address: '0xDb46d1Dc155634FbC732f92E853b10B288AD5a1d'
       abi: Contract
       startBlock: 29735286
     mapping:
@@ -19,7 +19,8 @@ dataSources:
         - name: Contract
           file: ./abis/Contract.json
       eventHandlers:
-        - event: PostCreated(indexed uint256,indexed uint256,string,address,bytes,address,bytes,uint256)
+        - event:
+            PostCreated(indexed uint256,indexed uint256,string,address,bytes,address,bytes,uint256)
           handler: handlePostCreated
       file: ./src/contract.ts
 templates:
