--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "@babel/preset-typescript": "^7.18.6",
     "@changesets/changelog-github": "^0.4.7",
     "@changesets/cli": "^2.25.2",
-    "@theguild/eslint-config": "^0.9.0",
-    "@theguild/prettier-config": "^1.0.0",
+    "@theguild/eslint-config": "0.11.0",
+    "@theguild/prettier-config": "2.0.1",
     "babel-jest": "^29.3.1",
-    "eslint": "^8.31.0",
+    "eslint": "8.48.0",
     "jest": "29.5.0",
-    "prettier": "^2.8.2"
+    "prettier": "3.0.3"
   },
   "pnpm": {
     "patchedDependencies": {
