--- a/examples/matic-lens-protocol-posts-subgraph/package.json
+++ b/examples/matic-lens-protocol-posts-subgraph/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lens-protocol-posts-sg",
   "license": "UNLICENSED",
+  "private": true,
   "scripts": {
     "build": "graph build",
     "codegen": "graph codegen",
@@ -11,8 +12,8 @@
     "test": "graph test"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "0.54.0",
-    "@graphprotocol/graph-ts": "0.30.0"
+    "@graphprotocol/graph-cli": "0.56.0",
+    "@graphprotocol/graph-ts": "0.31.0"
   },
   "devDependencies": {
     "matchstick-as": "0.5.2"
