--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@float-capital/float-subgraph-uncrashable": "^0.0.0-alpha.4",
     "@oclif/core": "2.8.6",
+    "@oclif/plugin-autocomplete": "^2.3.6",
     "@oclif/plugin-not-found": "^2.4.0",
     "@whatwg-node/fetch": "^0.8.4",
     "assemblyscript": "0.19.23",
@@ -84,7 +85,8 @@
       "-v"
     ],
     "plugins": [
-      "@oclif/plugin-not-found"
+      "@oclif/plugin-not-found",
+      "@oclif/plugin-autocomplete"
     ]
   }
 }
