--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@changesets/cli": "^2.25.2",
     "@theguild/eslint-config": "0.11.0",
     "@theguild/prettier-config": "2.0.1",
+    "@types/node": "^20.6.2",
     "babel-jest": "^29.3.1",
     "eslint": "8.48.0",
     "jest": "29.5.0",
