--- a/examples/matic-lens-protocol-posts-subgraph/package.json
+++ b/examples/matic-lens-protocol-posts-subgraph/package.json
@@ -1,5 +1,6 @@
 {
   "name": "lens-protocol-posts-sg",
+  "version": null,
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
@@ -17,6 +18,5 @@
   },
   "devDependencies": {
     "matchstick-as": "0.5.2"
-  },
-  "version": null
+  }
 }
