fix: send graph cli version as user agent

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -12,7 +12,8 @@
     "useUnknownInCatchVariables": false,
     "declaration": true,
     "skipLibCheck": true,
-    "allowJs": true
+    "allowJs": true,
+    "resolveJsonModule": true
   },
   "include": ["./src", "./tests"],
   "exclude": ["./tests/cli/init", "./tests/cli/validation"]
