prefix with example

--- a/examples/matic-lens-protocol-posts-subgraph/package.json
+++ b/examples/matic-lens-protocol-posts-subgraph/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lens-protocol-posts-sg",
+  "name": "example-lens-protocol-posts-sg",
   "version": "0.0.1",
   "license": "UNLICENSED",
   "private": true,
