--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "private": true,
   "packageManager": "pnpm@8.3.1",
   "engines": {
-    "pnpm": ">=8"
+    "pnpm": ">=8",
+    "node": ">=18.0.0"
   },
   "scripts": {
     "build": "pnpm --filter=@graphprotocol/graph-* build",
