--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "license": "(Apache-2.0 OR MIT)",
   "private": true,
-  "packageManager": "pnpm@8.3.1",
+  "packageManager": "pnpm@8.10.4",
   "engines": {
-    "pnpm": ">=8",
-    "node": ">=18.0.0"
+    "node": ">=18.0.0",
+    "pnpm": ">=8"
   },
   "scripts": {
     "build": "pnpm --filter=@graphprotocol/graph-* build",
