--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "license": "(Apache-2.0 OR MIT)",
   "private": true,
-  "packageManager": "pnpm@8.3.1",
+  "packageManager": "pnpm@8.10.4",
   "engines": {
+    "node": ">=18.0.0",
     "pnpm": ">=8"
   },
   "scripts": {
