--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         name: Setup Env
         with:
           nodeVersion: 20
-          packageManager: pnpm
+          packageManager: pnpm@8
 
       - name: Lint
         run: pnpm lint
@@ -40,7 +40,7 @@ jobs:
         name: Setup Env
         with:
           nodeVersion: 20
-          packageManager: pnpm
+          packageManager: pnpm@8
 
       - name: Setup git user information
         run: |
@@ -69,7 +69,7 @@ jobs:
         name: Setup Env
         with:
           nodeVersion: 20
-          packageManager: pnpm
+          packageManager: pnpm@8
 
       - name: Build Packages
         run: pnpm build
@@ -96,7 +96,7 @@ jobs:
         name: Setup Env
         with:
           nodeVersion: 20
-          packageManager: pnpm
+          packageManager: pnpm@8
 
       - name: Build Packages
         run: pnpm build # will also check types
