--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
         uses: the-guild-org/shared-config/setup@main
         with:
           nodeVersion: 20
-          packageManager: pnpm
+          packageManager: pnpm@8
       - name: Set variables
         id: vars
         run: |
