--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "(Apache-2.0 OR MIT)",
   "private": true,
+  "packageManager": "pnpm@8",
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=8"
