try pinning v8 for pnpm (#1528)
* try pinning v8 for pnpm

* update

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           nodeVersion: 20
           packageManager: pnpm
+          packageManagerVersion: 8.10.4
 
       - name: Lint
         run: pnpm lint
@@ -41,6 +42,7 @@ jobs:
         with:
           nodeVersion: 20
           packageManager: pnpm
+          packageManagerVersion: 8.10.4
 
       - name: Setup git user information
         run: |
@@ -70,6 +72,7 @@ jobs:
         with:
           nodeVersion: 20
           packageManager: pnpm
+          packageManagerVersion: 8.10.4
 
       - name: Build Packages
         run: pnpm build
@@ -97,6 +100,7 @@ jobs:
         with:
           nodeVersion: 20
           packageManager: pnpm
+          packageManagerVersion: 8.10.4
 
       - name: Build Packages
         run: pnpm build # will also check types
