--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,8 @@ jobs:
         with:
           nodeVersion: 20
           packageManager: pnpm
+          packageManagerVersion: 8.10.4
+
       - name: Set variables
         id: vars
         run: |
