--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,11 +22,10 @@
     "build": "tsc -b tsconfig.build.json && oclif manifest && oclif readme && copyfiles -u 1 src/**/*.graphql dist/",
     "oclif:pack": "npm pack && pnpm oclif pack tarballs --no-xz && node scripts/rename-tarballs.mjs",
     "test": "jest --verbose",
-    "test:add": "jest tests/cli/add.test.ts --verbose",
+    "test:add": "vitest run tests/cli/add.test.ts",
     "test:init": "jest tests/cli/init.test.ts --verbose",
-    "test:validation": "jest tests/cli/validation.test.ts --verbose",
-    "type-check": "tsc --noEmit",
-    "vitest:validation": "vitest tests/cli/validation.test.ts"
+    "test:validation": "vitest run tests/cli/validation.test.ts",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@float-capital/float-subgraph-uncrashable": "^0.0.0-alpha.4",
