--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -21,9 +21,9 @@
   "scripts": {
     "build": "tsc -b tsconfig.build.json && oclif manifest && oclif readme && copyfiles -u 1 src/**/*.graphql dist/",
     "oclif:pack": "npm pack && pnpm oclif pack tarballs --no-xz && node scripts/rename-tarballs.mjs",
-    "test": "jest --verbose",
+    "test": "vitest run --bail=1",
     "test:add": "vitest run tests/cli/add.test.ts",
-    "test:init": "jest tests/cli/init.test.ts --verbose",
+    "test:init": "vitest run tests/cli/init.test.ts",
     "test:validation": "vitest run tests/cli/validation.test.ts",
     "type-check": "tsc --noEmit"
   },
