--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
         with:
           timeout_minutes: 10
           max_attempts: 3
-          command: pnpm run test:cli -- --forceExit
+          command: pnpm run test:cli
 
   event-handler:
     name: Ethereum Basic Event Handlers
@@ -110,4 +110,4 @@ jobs:
         with:
           timeout_minutes: 10
           max_attempts: 3
-          command: pnpm run test:ts -- --forceExit
+          command: pnpm run test:ts
