feat: validate graphql schema at build time

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -31,6 +31,10 @@
     "@babel/core": "^7.20.5",
     "@babel/preset-typescript": "^7.18.6",
     "@float-capital/float-subgraph-uncrashable": "^0.0.0-alpha.4",
+    "@graphql-tools/graphql-file-loader": "^8.0.0",
+    "@graphql-tools/load": "^8.0.1",
+    "@graphql-tools/schema": "^10.0.2",
+    "@graphql-tools/url-loader": "^8.0.1",
     "@oclif/core": "2.8.6",
     "@oclif/plugin-autocomplete": "^2.3.6",
     "@oclif/plugin-not-found": "^2.4.0",
