--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
     needs: [lint]
     strategy:
       fail-fast: false
+      max-parallel: 0
       matrix:
         node-version: [18, 20, 21]
     steps:
