add StringOrBigInt union type for prune field

--- a/packages/cli/tests/cli/validation/indexer-hints/subgraph.yaml
+++ b/packages/cli/tests/cli/validation/indexer-hints/subgraph.yaml
@@ -4,7 +4,7 @@ description: Test subgraph
 schema:
   file: ./schema.graphql
 indexerHints:
-  prune: auto
+  prune: 100
 dataSources:
   - kind: ethereum/contract
     name: ExampleSubgraph
