--- a/examples/ethereum-basic-event-handlers/hardhat/Dockerfile
+++ b/examples/ethereum-basic-event-handlers/hardhat/Dockerfile
@@ -1,13 +1,12 @@
-FROM node:16-alpine
+FROM node:20-alpine
 
 COPY . /usr/src/app
 
 WORKDIR /usr/src/app
 
-RUN apk add git;
+RUN apk add git
 
-RUN apk add --update python3 make g++\
-  && rm -rf /var/cache/apk/*
+RUN apk add --update python3 make g++ && rm -rf /var/cache/apk/*
 
 RUN corepack enable
 
