--- a/examples/ethereum-cryptopunks-aggregations/package.json
+++ b/examples/ethereum-cryptopunks-aggregations/package.json
@@ -2,17 +2,19 @@
   "name": "PunkBoughtStats",
   "license": "UNLICENSED",
   "scripts": {
-    "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ PunkBoughtStats",
+    "codegen": "graph codegen",
     "create-local": "graph create --node http://localhost:8020/ PunkBoughtStats",
-    "remove-local": "graph remove --node http://localhost:8020/ PunkBoughtStats",
+    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ PunkBoughtStats",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 PunkBoughtStats",
+    "remove-local": "graph remove --node http://localhost:8020/ PunkBoughtStats",
     "test": "graph test"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.69.2",
     "@graphprotocol/graph-ts": "0.32.0"
   },
-  "devDependencies": { "matchstick-as": "0.5.0" }
+  "devDependencies": {
+    "matchstick-as": "0.5.0"
+  }
 }
