--- a/website/package.json
+++ b/website/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@hookform/resolvers": "^3.4.2",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-icons": "^1.3.0",
@@ -25,6 +26,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "connectkit": "^1.7.3",
+    "gql.tada": "^1.7.5",
+    "graphql": "15.5.0",
     "kubo-rpc-client": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,6 +40,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@0no-co/graphqlsp": "^1.12.3",
     "@tanstack/router-cli": "^1.32.10",
     "@tanstack/router-vite-plugin": "^1.32.17",
     "@types/node": "^20.6.2",
