--- a/website/package.json
+++ b/website/package.json
@@ -26,15 +26,19 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "connectkit": "^1.7.3",
+    "file-type": "^18.2.1",
     "gql.tada": "^1.7.5",
     "graphql": "15.5.0",
     "kubo-rpc-client": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
+    "semver": "7.4.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.11.0",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "wagmi": "^2.9.2",
     "yaml": "1.10.2",
     "zod": "^3.23.8"
@@ -46,6 +50,7 @@
     "@types/node": "^20.6.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/semver": "^7.3.13",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
